--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,8 +35,8 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/JavaApplication1
 endorsed.classpath=
 excludes=
-file.reference.jackson-core-2.9.9.jar=/Users/laurenkearney/Downloads/jackson-core-2.9.9.jar
-file.reference.jackson-databind-2.9.9.jar=/Users/laurenkearney/Downloads/jackson-databind-2.9.9.jar
+file.reference.jackson-core-2.9.9.jar=jackson-core-2.9.9.jar
+file.reference.jackson-databind-2.9.9.jar=jackson-databind-2.9.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
