--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/JavaApplication1
 endorsed.classpath=
 excludes=
+file.reference.jackson-annotations-2.9.9.jar=jackson-annotations-2.9.9.jar
 file.reference.jackson-core-2.9.9.jar=jackson-core-2.9.9.jar
 file.reference.jackson-databind-2.9.9.jar=jackson-databind-2.9.9.jar
 includes=**
@@ -42,7 +43,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jackson-core-2.9.9.jar}:\
-    ${file.reference.jackson-databind-2.9.9.jar}
+    ${file.reference.jackson-databind-2.9.9.jar}:\
+    ${file.reference.jackson-annotations-2.9.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
